style: cambios cosméticos en la UI del menú lateral
- Fondo del sidebar cambiado a color sólido #174A80
- Título 'CEIBA' en color dorado #efb810
- Añadida insignia de Ceiba sobre el título (centrados)
- Eliminado el emoji/icono de Bootstrap del título
- Eliminado el enlace a GitHub del header

--- a/src/Ceiba.Web/Components/Layout/NavMenu.razor
+++ b/src/Ceiba.Web/Components/Layout/NavMenu.razor
@@ -2,9 +2,10 @@
 @inject AuthenticationStateProvider AuthenticationStateProvider
 
 <div class="top-row ps-3 navbar navbar-dark" role="banner">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="" aria-label="Ceiba - Ir al inicio">
-            <i class="bi bi-shield-check me-2" aria-hidden="true"></i>Ceiba
+    <div class="container-fluid d-flex justify-content-center">
+        <a class="navbar-brand d-flex flex-column align-items-center text-center" href="" aria-label="CEIBA - Ir al inicio">
+            <img src="images/insignia_ceiba_200.png" alt="Insignia CEIBA" class="navbar-insignia" />
+            <span>CEIBA</span>
         </a>
     </div>
 </div>
